# bug_tracker

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
bug_tracker/: manage.py
bug_tracker/bug_tracker/: asgi.py  celery.py  environments.py  url_resolver.py  urls.py  wsgi.py
bug_tracker/bug_tracker/settings/: base.py  development.py  production.py  test.py
bug_tracker/core/: email_backend.py  emails.py  environments.py  exceptions.py  filters.py  logger.py  middleware.py  models.py  pagination.py  schema.py  serializers.py  services.py  tasks.py  url_resolver.py  utils.py  validators.py
bug_tracker/core/management/commands/: wait_for_db.py
bug_tracker/core/migrations/: 0001_initial.py
bug_tracker/issues/: admin.py  apps.py  filters.py  models.py  permissions.py  signals.py  urls.py
bug_tracker/issues/migrations/: 0001_initial.py
bug_tracker/issues/serializers/: attachments.py  comment.py  history.py  issue.py  shared.py
bug_tracker/issues/services/: command_attachment.py  command_comment.py  command_history.py  command_issue.py  emails.py  exceptions.py  query_attachments.py  query_comment.py  query_history.py  query_issue.py
bug_tracker/issues/templates/serializers/: comment.py  issue.py
bug_tracker/issues/views/: attachment.py  attachments.py  comment.py  history.py  issue.py
bug_tracker/projects/: admin.py  filters.py  models.py  permissions.py  project_resolver.py  serializers.py  urls.py  views.py
bug_tracker/projects/migrations/: 0001_initial.py  0002_alter_projectidentifier_options_and_more.py  0003_alter_projectroleassignment_options.py
bug_tracker/projects/selectors/: project.py  projects.py
bug_tracker/projects/serializers/: member.py  project.py
bug_tracker/projects/services/: command_member.py  command_project.py  emails.py  exceptions.py  member.py  project.py  query_member.py  query_project.py
bug_tracker/projects/views/: member.py  project.py
bug_tracker/tests/: conftest.py  factories.py  utils.py
bug_tracker/tests/test_core/integration/: test_commands.py  test_email_backend.py  test_models.py  test_pagination.py
bug_tracker/tests/test_core/unit/: test_emails.py  test_environments.py  test_exceptions.py  test_filters.py  test_middleware.py  test_pagination.py  test_schema.py  test_serializers.py  test_services.py  test_tasks.py  test_url_resolver.py  test_utils.py  test_validators.py
bug_tracker/tests/test_issues/: conftest.py
bug_tracker/tests/test_issues/e2e/: test_issue_management.py
bug_tracker/tests/test_issues/integration/: conftest.py  test_command_attachment.py  test_command_comment.py  test_command_history.py  test_command_issue.py  test_emails.py  test_models.py  test_query_attachment.py  test_query_comment.py  test_query_history.py  test_query_issue.py  test_views.py  test_views_attachment.py  test_views_comment.py  test_views_history.py  test_views_issue.py
bug_tracker/tests/test_issues/unit/: test_filters.py
bug_tracker/tests/test_projects/e2e/: test_project_management.py
bug_tracker/tests/test_projects/integration/: test_command_member.py  test_command_project.py  test_emails.py  test_models.py  test_query_member.py  test_query_project.py  test_views.py  test_views_member.py  test_views_project.py
bug_tracker/users/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  url_generators.py  url_resolver.py  urls.py  utils.py  validators.py  views.py
bug_tracker/users/migrations/: 0001_initial.py
docker/django/: Dockerfile
docker/nginx/: dev.conf  nginx.conf  prod.conf
docker/nginx/ssl/: bugtracker.crt  bugtracker.key
scripts/: check_pytestmark.py
(+18 files in other folders)
